// Vitest Snapshot v1

exports[`adastra-plugin:build > builds out adastra.liquid snippet file for production 1`] = `
"{% # theme-check-disable %}
{% comment %}
  IMPORTANT: This snippet is automatically generated by Vite.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = adastra | replace: '~/', '../' | replace: '@/', '../' %}
{% if path == \\"/test/__fixtures__/src/entrypoints/base.css\\" or path == \\"base.css\\" %}
  {{ 'base-c473947e.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload }}
{% elsif path == \\"/test/__fixtures__/src/entrypoints/index.ts\\" or path == \\"index.ts\\" %}
  <link rel=\\"modulepreload\\" href=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" crossorigin=\\"anonymous\\">
  <script src=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" type=\\"module\\" crossorigin=\\"anonymous\\"></script>
{% endif %}
"
`;

exports[`adastra-plugin:build > builds out adastra.liquid snippet file with custom source folder 1`] = `
"{% # theme-check-disable %}
{% comment %}
  IMPORTANT: This snippet is automatically generated by Vite.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = adastra | replace: '~/', '../' | replace: '@/', '../' %}
{% if path == \\"/test/__fixtures__/frontend/entrypoints/base.css\\" or path == \\"base.css\\" %}
  {{ 'base-c473947e.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload }}
{% elsif path == \\"/test/__fixtures__/frontend/entrypoints/index.ts\\" or path == \\"index.ts\\" %}
  <link rel=\\"modulepreload\\" href=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" crossorigin=\\"anonymous\\">
  <script src=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" type=\\"module\\" crossorigin=\\"anonymous\\"></script>
{% endif %}
"
`;

exports[`adastra-plugin:build > builds out adastra.liquid snippet file with hashing 1`] = `
"{% # theme-check-disable %}
{% comment %}
  IMPORTANT: This snippet is automatically generated by Vite.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = vite-tag | replace: '~/', '../' | replace: '@/', '../' %}
{% if path == \\"/test/__fixtures__/src/entrypoints/base.css\\" or path == \\"base.css\\" %}
  {{ 'base-c473947e.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload }}
{% elsif path == \\"/test/__fixtures__/src/entrypoints/index.ts\\" or path == \\"index.ts\\" %}
  <link rel=\\"modulepreload\\" href=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" crossorigin=\\"anonymous\\">
  <script src=\\"{{ 'index-bf7c659a.js' | asset_url | split: '?' | first }}\\" type=\\"module\\" crossorigin=\\"anonymous\\"></script>
{% endif %}
"
`;
